; ModuleID = '/home/carl/AnghaBench/RetroArch/input/drivers_hid/extr_wiiusb_hid.c_wiiusb_hid_read_cb.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/drivers_hid/extr_wiiusb_hid.c_wiiusb_hid_read_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wiiusb_adapter = type { i64, i32, i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i8*)* @wiiusb_hid_read_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @wiiusb_hid_read_cb(i64 %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.wiiusb_adapter*, align 8
  %6 = alloca %struct.TYPE_2__*, align 8
  store i64 %0, i64* %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = bitcast i8* %7 to %struct.wiiusb_adapter*
  store %struct.wiiusb_adapter* %8, %struct.wiiusb_adapter** %5, align 8
  %9 = load %struct.wiiusb_adapter*, %struct.wiiusb_adapter** %5, align 8
  %10 = icmp ne %struct.wiiusb_adapter* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load %struct.wiiusb_adapter*, %struct.wiiusb_adapter** %5, align 8
  %13 = getelementptr inbounds %struct.wiiusb_adapter, %struct.wiiusb_adapter* %12, i32 0, i32 3
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  br label %16

15:                                               ; preds = %2
  br label %16

16:                                               ; preds = %15, %11
  %17 = phi %struct.TYPE_2__* [ %14, %11 ], [ null, %15 ]
  store %struct.TYPE_2__* %17, %struct.TYPE_2__** %6, align 8
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %19 = icmp ne %struct.TYPE_2__* %18, null
  br i1 %19, label %20, label %46

20:                                               ; preds = %16
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = icmp ne i32* %23, null
  br i1 %24, label %25, label %46

25:                                               ; preds = %20
  %26 = load i64, i64* %3, align 8
  %27 = icmp sgt i64 %26, 0
  br i1 %27, label %28, label %46

28:                                               ; preds = %25
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i32*, i32** %30, align 8
  %32 = load %struct.wiiusb_adapter*, %struct.wiiusb_adapter** %5, align 8
  %33 = getelementptr inbounds %struct.wiiusb_adapter, %struct.wiiusb_adapter* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = getelementptr inbounds i32, i32* %31, i64 %34
  %36 = load %struct.wiiusb_adapter*, %struct.wiiusb_adapter** %5, align 8
  %37 = getelementptr inbounds %struct.wiiusb_adapter, %struct.wiiusb_adapter* %36, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  %39 = load %struct.wiiusb_adapter*, %struct.wiiusb_adapter** %5, align 8
  %40 = getelementptr inbounds %struct.wiiusb_adapter, %struct.wiiusb_adapter* %39, i32 0, i32 2
  %41 = load i64, i64* %40, align 8
  %42 = sub nsw i64 %41, 1
  %43 = load i64, i64* %3, align 8
  %44 = add nsw i64 %43, 1
  %45 = call i32 @pad_connection_packet(i32* %35, i64 %38, i64 %42, i64 %44)
  br label %46

46:                                               ; preds = %28, %25, %20, %16
  %47 = load %struct.wiiusb_adapter*, %struct.wiiusb_adapter** %5, align 8
  %48 = icmp ne %struct.wiiusb_adapter* %47, null
  br i1 %48, label %49, label %52

49:                                               ; preds = %46
  %50 = load %struct.wiiusb_adapter*, %struct.wiiusb_adapter** %5, align 8
  %51 = getelementptr inbounds %struct.wiiusb_adapter, %struct.wiiusb_adapter* %50, i32 0, i32 1
  store i32 0, i32* %51, align 8
  br label %52

52:                                               ; preds = %49, %46
  %53 = load i64, i64* %3, align 8
  ret i64 %53
}

declare dso_local i32 @pad_connection_packet(i32*, i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
